--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,5 +7,13 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: sans-serif;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  background-color: aqua;
 }
